k8s/nats-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-headless
  labels:
    app: nats
spec:
  ports:
  - port: 4222
    name: client
  - port: 8222
    name: monitor
  - port: 6222
    name: cluster
  clusterIP: None
  selector:
    app: nats
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app: nats
spec:
  ports:
  - port: 4222
    name: client
  - port: 8222
    name: monitor
  selector:
    app: nats
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  labels:
    app: nats
spec:
  selector:
    matchLabels:
      app: nats
  serviceName: nats-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:2.9.15-alpine
        ports:
        - containerPort: 4222
          name: client
        - containerPort: 8222
          name: monitor
        - containerPort: 6222
          name: cluster
        args:
        - "-js"
        - "--name=$(POD_NAME)"
        - "--cluster_name=nats-cluster"
        - "--cluster=nats://0.0.0.0:6222"
        - "--routes=nats://nats-0.nats-headless:6222,nats://nats-1.nats-headless:6222,nats://nats-2.nats-headless:6222"
        - "--http_port=8222"
        volumeMounts:
        - name: nats-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: nats-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
