k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-core-backend
  labels:
    app: banking-core
    component: backend-java
spec:
  selector:
    app: banking-core
    component: backend-java
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  type: LoadBalancer
